[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/EquipmentSlot.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Tile.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Slot" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Border" type="Sprite" parent="."]
position = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="Icon" type="Sprite" parent="."]
centered = false
offset = Vector2( 0, -8 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
